# discord-voice-normalization-bot

./: README.md  main.py  pyproject.toml  voice_analysis.py
src/: voice_analysis.py
